Update fuzz.yml to test workflow

--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -2,8 +2,6 @@ name: On Push, Fuzz
 
 on: push
 
-env:
-  fuzz_dir: fuzz
 jobs:
   fuzz:
     name: fuzz
@@ -11,10 +9,6 @@ jobs:
     steps:
     - name: Check out repo
       uses: actions/checkout@v2
-      with:
-       repository: MelvinM8/BIMM-SQA2023-PROJECT
-       token: ${{secrets.GITHUB_TOKEN}}
-       path: ${{env.fuzz_dir}}
     - name: Run Fuzz
-      run: python ${{ env.fuzz_dir }}/fuzz.py
+      run: python KubeSec-master/fuzz.py
       shell: sh
