--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -9,6 +9,15 @@ jobs:
     steps:
     - name: Check out repo
       uses: actions/checkout@v2
+    - name: setup python
+      uses: actions/setup-python@v2
+      with:
+       python-version: 3.8
+       -name: Dependencies
+       run:   |
+          python -m pip install --upgrade pip
+          pip install pandas
+          pip install numpy
     - name: Run Fuzz
       run: python KubeSec-master/fuzz.py
       shell: sh
