--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -18,7 +18,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pandas
           pip install numpy
-          pip install pyyaml
+          pip install PyYaml
     - name: Run Fuzz
       run: python KubeSec-master/fuzz.py
       shell: sh
