--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -1,7 +1,5 @@
 name: On Push, Fuzz
-
 on: push
-
 jobs:
   fuzz:
     name: fuzz
@@ -9,16 +7,16 @@ jobs:
     steps:
     - name: Check out repo
       uses: actions/checkout@v2
-    - name: setup python
+    - name: Setup python
       uses: actions/setup-python@v2
       with:
-       python-version: 3.8
-       -name: Dependencies
-       run:   |
-          python -m pip install --upgrade pip
-          pip install pandas
-          pip install numpy
-          pip install PyYaml
+        python-version: 3.8
+    - name: Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pandas
+        pip install numpy
+        pip install pyyaml
     - name: Run Fuzz
       run: python KubeSec-master/fuzz.py
       shell: sh
